--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <header>
             <h1>Vegetables</h1>
             <div class="section">
-                <img src="vegetable photo/fb.png" alt="Facebook">
+                <img src="https://github.com/112ac2004/112ac2004..github.io/blob/main/fb.png?raw=true" alt="Facebook">
                 <img src="vegetable photo/ig.png" alt="Instagram">
                 <a href="#">Login</a>
                 <a href="#">Join</a>
