--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <h1>Vegetables</h1>
             <div class="section">
                 <img src="https://github.com/112ac2004/112ac2004..github.io/blob/main/fb.png?raw=true" alt="Facebook">
-                <img src="vegetable photo/ig.png" alt="Instagram">
+                <img src="https://github.com/112ac2004/112ac2004..github.io/blob/main/ig.png?raw=true" alt="Instagram">
                 <a href="#">Login</a>
                 <a href="#">Join</a>
             </div>
